tests/baselines/reference/typedefScope1.errors.txt
tests/cases/conformance/jsdoc/typedefScope1.js(13,12): error TS2304: Cannot find name 'B'.


==== tests/cases/conformance/jsdoc/typedefScope1.js (1 errors) ====
    function B1() {
        /** @typedef {number} B */
        /** @type {B} */
        var ok1 = 0;
    }
    
    function B2() {
        /** @typedef {string} B */
        /** @type {B} */
        var ok2 = 'hi';
    }
    
    /** @type {B} */
               ~
!!! error TS2304: Cannot find name 'B'.
    var notOK = 0;
    